--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "cd frontend && npm run build",
     "start": "node backend/server.js",
     "install:all": "npm install && cd frontend && npm install && cd ../backend && npm install",
-    "postinstall": "cd frontend && npm install && npm run build && cd ../backend && npm install"
+    "postinstall": "cd backend && npm install"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
