--- a/backend/databricks-config.json
+++ b/backend/databricks-config.json
@@ -1,24 +1,5 @@
 {
-  "environments": {
-    "prod": {
-      "name": "Production",
-      "workspaceUrl": "https://e2-demo-field-eng.cloud.databricks.com/",
-      "token": "",
-      "enabled": true
-    },
-    "staging": {
-      "name": "Staging",
-      "workspaceUrl": "",
-      "token": "",
-      "enabled": false
-    },
-    "partner": {
-      "name": "Partner Workspace",
-      "workspaceUrl": "",
-      "token": "",
-      "enabled": false
-    }
-  },
+  "environments": {},
   "settings": {
     "useRealAPIs": true,
     "cacheTimeout": 300000
